manifests/gravitee/gravitee-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gravitee-api
  labels:
    app: gravitee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gravitee
      tier: gravitee-api
  template:
    metadata:
      labels:
        app: gravitee
        tier: gravitee-api
    spec:
      containers:
      - name: gravitee-api
        image: graviteeio/apim-management-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
        volumeMounts:
        - name: gravitee-config-volume
          mountPath: /opt/graviteeio-management-api/config
          subPath: gravitee.yaml
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: gravitee-config-volume
        configMap:
          name: gravitee-config
          items:
          - key: gravitee.yaml
            path: gravitee.yaml
