manifests/gravitee/gravitee-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gravitee-portal
  labels:
    app: gravitee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gravitee
      tier: gravitee-portal
  template:
    metadata:
      labels:
        app: gravitee
        tier: gravitee-portal
    spec:
      containers:
      - name: gravitee-portal
        image: graviteeio/apim-portal-ui:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8084
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
