manifests/gravitee/gravitee-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gravitee-ui
  labels:
    app: gravitee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gravitee
      tier: gravitee-ui
  template:
    metadata:
      labels:
        app: gravitee
        tier: gravitee-ui
    spec:
      containers:
      - name: gravitee-ui
        image: graviteeio/apim-management-ui:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
