manifests/gravitee/gravitee-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitee-api
  labels:
    app: gravitee
    tier: gravitee-api
spec:
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http
  selector:
    app: gravitee
    tier: gravitee-api
