manifests/gravitee/gravitee-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitee-gateway
  labels:
    app: gravitee
    tier: gravitee-gateway
spec:
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: gravitee
    tier: gravitee-gateway
