manifests/gravitee/gravitee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitee
spec:
  type: NodePort
  ports:
  - port: 8083
    targetPort: 8083
    nodePort: 30083
  selector:
    app: gravitee
