manifests/gravitee/gravitee-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gravitee-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gravitee.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gravitee
            port:
              number: 8083
